fixed overflow issue on section 2

--- a/css/main.css
+++ b/css/main.css
@@ -282,7 +282,7 @@
   .chart2 .chart2-change {
     text-align: right;
     width: 35%;
-    height: 40%; }
+    height: 35%; }
     .chart2 .chart2-change div:nth-child(1) {
       color: #25bd3d; }
     .chart2 .chart2-change h3 {
@@ -292,9 +292,11 @@
   .chart2 .chart2-chart {
     width: 100%;
     height: 60%;
+    overflow: visible;
+    /* TEMPORARY FIX TODO: need a permanent fix to graph overflowing on big screens? */
     display: flex;
     justify-content: center;
-    align-items: center; }
+    align-items: flex-end; }
 
 .hidden {
   display: none; }
