--- a/scss/_section2.scss
+++ b/scss/_section2.scss
@@ -50,7 +50,7 @@
 
     text-align: right;
     width: 35%;
-    height: 40%;
+    height: 35%;
 
     div:nth-child(1) {
       color: rgb(37, 189, 61);
@@ -66,10 +66,11 @@
   .chart2-chart {
     width: 100%;
     height: 60%;
+    overflow: visible; /* TEMPORARY FIX TODO: need a permanent fix to graph overflowing on big screens? */
 
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     // background-color: lightgrey;
   }
 }
